[minor]: Small improvements for the pre-configured Killingfloor.ini

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -3,6 +3,7 @@ ServerActors=ServerAdsKF.ServerAdsKF
 ServerActors=Acedia.StartUp
 
 [IpDrv.MasterServerUplink]
+SendStats=True
 ServerBehindNAT=True
 
 [IpDrv.HTTPDownload]
@@ -38,58 +39,6 @@ bAdminCanPause=True
 bWeaponShouldViewShake=True
 GameDifficulty=4.000000
 
-[KFMod.KFMaplist]
-MapNum=0
-Maps=KF-westlondon
-Maps=KF-BioticsLab
-Maps=KF-Offices
-Maps=KF-MountainPass
-Maps=KF-Farm
-Maps=KF-NoScape
-Maps=KF-Sacred
-Maps=KF-BackToBack
-Maps=KF-DefenceCave
-Maps=KF-NoHope
-Maps=KF-MushroomWithoutHope
-Maps=KF-CastleDefense
-Maps=KF-Doom2-Final-V7
-Maps=KF-Dust2-Classic-Night-b2
-Maps=KF-Dust_1
-Maps=KF-Farm-Day-v1
-Maps=KF-LittleDeathBasin-fix2
-Maps=KF-NukeTown
-Maps=KF-ROMAN-ARENA[UltraMapping]
-Maps=KF-Termination
-Maps=KF-AbusementPark
-Maps=KF-Aperture
-Maps=KF-Bedlam
-Maps=KF-Biohazard
-Maps=KF-Clandestine
-Maps=KF-Crash
-Maps=KF-Departed
-Maps=KF-EvilSantasLair
-Maps=KF-FilthsCross
-Maps=KF-Forgotten
-Maps=KF-Foundry
-Maps=KF-FrightYard
-Maps=KF-Hell
-Maps=KF-Hellride
-Maps=KF-HillbillyHorror
-Maps=KF-Hospitalhorrors
-Maps=KF-IceCave
-Maps=KF-Icebreaker
-Maps=KF-Manor
-Maps=KF-Menu
-Maps=KF-MoonBase
-Maps=KF-SirensBelch
-Maps=KF-Steamland
-Maps=KF-Stronghold
-Maps=KF-Suburbia
-Maps=KF-ThrillsChills
-Maps=KF-Transit
-Maps=KF-Waterworks
-Maps=KF-Wyre
-
 [MedicAlert.MedicAlert]
 NameColour=(B=255,G=255,R=255,A=255)
 TitleColour=(B=0,G=0,R=255,A=255)
@@ -97,57 +46,3 @@ HealthLimit=45
 MaximumNameLength=16
 AlertMessage=Heal Your Fucking Mates, Bloody Hell!
 UpdateFrequency=2.000000
-
-[DefaultKF0 MaplistRecord]
-DefaultTitle=Default KF0
-DefaultGameType=KFMod.KFGameType
-DefaultActive=0
-DefaultMaps=KF-westlondon
-DefaultMaps=KF-BioticsLab
-DefaultMaps=KF-Offices
-DefaultMaps=KF-MountainPass
-DefaultMaps=KF-Farm
-DefaultMaps=KF-NoScape
-DefaultMaps=KF-Sacred
-DefaultMaps=KF-BackToBack
-DefaultMaps=KF-DefenceCave
-DefaultMaps=KF-NoHope
-DefaultMaps=KF-MushroomWithoutHope
-DefaultMaps=KF-CastleDefense
-DefaultMaps=KF-Doom2-Final-V7
-DefaultMaps=KF-Dust2-Classic-Night-b2
-DefaultMaps=KF-Dust_1
-DefaultMaps=KF-Farm-Day-v1
-DefaultMaps=KF-LittleDeathBasin-fix2
-DefaultMaps=KF-NukeTown
-DefaultMaps=KF-ROMAN-ARENA[UltraMapping]
-DefaultMaps=KF-Termination
-DefaultMaps=KF-AbusementPark
-DefaultMaps=KF-Aperture
-DefaultMaps=KF-Bedlam
-DefaultMaps=KF-Biohazard
-DefaultMaps=KF-Clandestine
-DefaultMaps=KF-Crash
-DefaultMaps=KF-Departed
-DefaultMaps=KF-EvilSantasLair
-DefaultMaps=KF-FilthsCross
-DefaultMaps=KF-Forgotten
-DefaultMaps=KF-Foundry
-DefaultMaps=KF-FrightYard
-DefaultMaps=KF-Hell
-DefaultMaps=KF-Hellride
-DefaultMaps=KF-HillbillyHorror
-DefaultMaps=KF-Hospitalhorrors
-DefaultMaps=KF-IceCave
-DefaultMaps=KF-Icebreaker
-DefaultMaps=KF-Manor
-DefaultMaps=KF-Menu
-DefaultMaps=KF-MoonBase
-DefaultMaps=KF-SirensBelch
-DefaultMaps=KF-Steamland
-DefaultMaps=KF-Stronghold
-DefaultMaps=KF-Suburbia
-DefaultMaps=KF-ThrillsChills
-DefaultMaps=KF-Transit
-DefaultMaps=KF-Waterworks
-DefaultMaps=KF-Wyre
