[minor]: Added some commented notes about replacing the file

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -1,3 +1,10 @@
+#######################################################
+# Do note replace THIS Killingfloor.ini and overwrite
+# your defautl file.
+# Just 'ADD/CHANGE' the configs below under their respective
+# positions in your Killingfloor.ini
+#######################################################
+
 [Engine.GameEngine]
 ServerActors=ServerAdsKF.ServerAdsKF
 ServerActors=Acedia.StartUp
@@ -44,5 +51,5 @@ NameColour=(B=255,G=255,R=255,A=255)
 TitleColour=(B=0,G=0,R=255,A=255)
 HealthLimit=45
 MaximumNameLength=16
-AlertMessage=Heal Your Fucking Mates, Bloody Hell!
+AlertMessage=Healing Needed!
 UpdateFrequency=2.000000
