[release]: v8.0 Public Release

--- a/System/KFMapVote.ini
+++ b/System/KFMapVote.ini
@@ -18,7 +18,7 @@ KickPercent=51
 bAnonymousKicking=False
 MapListLoaderType=xVoting.DefaultMapListLoader
 ServerNumber=1
-CurrentGameConfig=0
+CurrentGameConfig=24
 GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard",Mutators="MutLoader.MutLoader",Options="Difficulty=4")
 GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=4")
 GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="0. Hard - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=4")
@@ -43,5 +43,5 @@ GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5
 GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 1F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_1",Options="Difficulty=7")
 GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 2F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_2",Options="Difficulty=7")
 GameConfig=(GameClass="KFNFN.NFNGameType",Prefix="KF-",Acronym="KF-",GameName="5. NFN-HoE - 3F",Mutators="MutLoader.MutLoader,FakedPlus.Faked_3",Options="Difficulty=7")
-
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF-",Acronym="KF-",GameName="6. Beginner - Vanilla [Perk Progression Enabled]",Mutators="MutLoader.MutLoader",Options="Difficulty=1")
 
