--- a/System/KFServerTools.ini
+++ b/System/KFServerTools.ini
@@ -1,3 +1,19 @@
+[KFServerTools.BoostMe]
+# Value for speed boost | Recommended: Between 500 - 1000 (More than 1000 and you'll become flash)
+iSpeedBoost=600
+# If this is set to anything above 0, you will get extra 'boost' time (duration) AFTER the wave has already started
+iAfterWaveStartBoost=6
+# Speed boost duration for match start | This is recommended to be 10 because countdown for match start is 10
+iMatchStartBoost=10
+# Message to show at MatchStart boost
+sMatchStartBoostMessage=%bMatch Start%w Speed Boost %tActivated!%w
+# Message to show at TraderTime boost
+sTraderBoostMessage=%bTrader%w Speed Boost %tActivated!%w
+# Message to show when boost ends
+sBoostEndMessage=%bTrader%w Speed Boost %tDeactivated!%w
+# Controls whether the notification/message is global (On Screen) or in-chat
+bGlobalMSG=True
+
 [KFServerTools.KFServerTools]
 # If set to True, only special players can manipulate trader time!
 bAdminAndSelectPlayers=True
@@ -27,8 +43,6 @@ iDefaultTraderTime=120
 iReviveCost=300
 # Timer on which the collected votes will reset, if the trader skip vote didn't pass
 iVoteReset=30
-# If bApplyTraderSpeed is enabled, players ground speed will be 'MULTIPLIED' with below value
-iSpeedBoost=2
 # Add Special players who can access the mutate commands for trader manipulation
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951")
 # Please do not delete or modify the tags of colors below!
