--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -2,6 +2,12 @@
 
 [Settings1 MutLoaderObject]
 GameTypeName=KFGameType
+GameDifficulty=1.0
+ServerName=NANU NANU CULT | [EU] | BEGINNER | TESTING PURPOSES, DO NOT JOIN
+Mutator=
+
+[Settings2 MutLoaderObject]
+GameTypeName=KFGameType
 GameDifficulty=4.0
 ServerName=NANU NANU CULT | [EU] | HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
@@ -33,7 +39,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 
-[Settings2 MutLoaderObject]
+[Settings3 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=5.0
 ServerName=NANU NANU CULT | [EU] | SUICIDAL
@@ -66,7 +72,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 
-[Settings3 MutLoaderObject]
+[Settings4 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=7.0
 ServerName=NANU NANU CULT | [EU] | HELL ON EARTH
@@ -99,7 +105,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 
-[Settings4 MutLoaderObject]
+[Settings5 MutLoaderObject]
 GameTypeName=NFNGameType
 GameDifficulty=4.0
 ServerName=NANU NANU CULT | [EU] | NFN-HARD
@@ -133,7 +139,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 
-[Settings5 MutLoaderObject]
+[Settings6 MutLoaderObject]
 GameTypeName=NFNGameType
 GameDifficulty=5.0
 ServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL
@@ -167,7 +173,7 @@ Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 
-[Settings6 MutLoaderObject]
+[Settings7 MutLoaderObject]
 GameTypeName=NFNGameType
 GameDifficulty=7.0
 ServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH
