--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -1,19 +1,19 @@
 [ServerAdsKF.ServerAdsKF]
 bEnabled=True
-fDelay=60.000000
+fDelay=100.000000
 sLines[0]=%rServer Hosted by Vel-San, Contact on Steam for Support
-sLines[1]=%bServer IP: %g217.182.197.134 %w| Fav. the server for easier access!
-sLines[2]=%oWant to be %bViP %w? join the %bSteam Group: %w/groups/%gNanu-Nanu %w& be a constant player on the server!
-sLines[3]=%oNo Cheating, Griefing or BMing! This will result in a perma-ban (IP + SteamID)
-sLines[4]=%oAlways Stay Grouped!
-sLines[5]=%oServer Has Custom Maps
-sLines[6]=%oServer Has Difficulty Votes
-sLines[7]=%oPlayer Outfits in the %g'Misc'%o section of the trader shop
-sLines[8]=%oType %g'mutate sb help'%w in your console to get %gSoundBoard%w help
-sLines[9]=%oType %g'mutate st help'%w in your console to get %gServerTools%w help
-sLines[10]=%oAll DLC Weapons Unlocked
-sLines[11]=%rServer is NOT White-listed!
-sLines[12]=# SHARE THE NANU NANU KNOWLEDGE, LET THE CULT GROW!
+sLines[1]=%oWant to be %bViP %w? join the %bSteam Group: %w/groups/%gNanu-Nanu %w& be a constant player on the server!
+sLines[2]=%oNo Cheating, Griefing or BMing! This will result in a perma-ban (IP + SteamID)
+sLines[3]=%oAlways Stay Grouped!
+sLines[4]=%oServer Has Custom Maps
+sLines[5]=%oServer Has Difficulty Votes
+sLines[6]=%oPlayer Outfits in the %g'Misc'%o section of the trader shop
+sLines[7]=%oType %g'mutate sb help'%w in your console to get %gSoundBoard%w help
+sLines[8]=%oType %g'mutate st help'%w in your console to get %gServerTools%w help
+sLines[9]=%oAll DLC Weapons Unlocked
+sLines[10]=%rServer is NOT White-listed!
+sLines[11]=# SHARE THE NANU NANU KNOWLEDGE, LET THE CULT GROW!
+sLines[12]=
 sLines[13]=
 sLines[14]=
 sLines[15]=
