[release]: v8.1 Public Release

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -3,7 +3,7 @@
 [Settings1 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=1.0
-ServerName=NANU NANU CULT | [EU] | BEGINNER | TESTING PURPOSES, DO NOT JOIN
+ServerName=NANU NANU CULT | [EU] | BEGINNER | TESTING PURPOSES! DO NOT JOIN
 Mutator=
 
 [Settings2 MutLoaderObject]
@@ -31,7 +31,7 @@ Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=KFAreYouVIP.KFAreYouVIP
-Mutator=KFWhispColorChanger.KFWhispColorChanger
+Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
@@ -64,7 +64,7 @@ Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=KFAreYouVIP.KFAreYouVIP
-Mutator=KFWhispColorChanger.KFWhispColorChanger
+Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
@@ -97,7 +97,7 @@ Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=KFAreYouVIP.KFAreYouVIP
-Mutator=KFWhispColorChanger.KFWhispColorChanger
+Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
@@ -130,7 +130,7 @@ Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=KFAreYouVIP.KFAreYouVIP
-Mutator=KFWhispColorChanger.KFWhispColorChanger
+Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
@@ -164,7 +164,7 @@ Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=KFAreYouVIP.KFAreYouVIP
-Mutator=KFWhispColorChanger.KFWhispColorChanger
+Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
@@ -198,7 +198,7 @@ Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=KFAreYouVIP.KFAreYouVIP
-Mutator=KFWhispColorChanger.KFWhispColorChanger
+Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
