[misc]: Updated AreYouVip mut

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -30,7 +30,7 @@ Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
-Mutator=KFAreYouVIP.KFAreYouVIP
+Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
@@ -63,7 +63,7 @@ Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
-Mutator=KFAreYouVIP.KFAreYouVIP
+Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
@@ -96,7 +96,7 @@ Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
-Mutator=KFAreYouVIP.KFAreYouVIP
+Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
@@ -129,7 +129,7 @@ Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
-Mutator=KFAreYouVIP.KFAreYouVIP
+Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
@@ -163,7 +163,7 @@ Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
-Mutator=KFAreYouVIP.KFAreYouVIP
+Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
@@ -197,7 +197,7 @@ Mutator=MutKillMessage.MutKillMessage
 Mutator=MedicAlert.MedicAlert
 Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
-Mutator=KFAreYouVIP.KFAreYouVIP
+Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
 Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
