[release]: v8.4 Public Release

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -3,7 +3,7 @@
 [Settings1 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=1.0
-ServerName=NANU NANU CULT | [EU] | BEGINNER | TESTING PURPOSES! DO NOT JOIN
+ServerName=NANU NANU CULT | [EU] | BEGINNER | TESTING - DO NOT JOIN!
 Mutator=
 
 [Settings2 MutLoaderObject]
@@ -38,6 +38,7 @@ Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
+Mutator=HUDEffects.HUDEffects
 
 [Settings3 MutLoaderObject]
 GameTypeName=KFGameType
@@ -71,6 +72,7 @@ Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
+Mutator=HUDEffects.HUDEffects
 
 [Settings4 MutLoaderObject]
 GameTypeName=KFGameType
@@ -104,6 +106,7 @@ Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
+Mutator=HUDEffects.HUDEffects
 
 [Settings5 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -138,6 +141,7 @@ Mutator=KFNFN.KFNFN
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
+Mutator=HUDEffects.HUDEffects
 
 [Settings6 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -172,6 +176,7 @@ Mutator=KFNFN.KFNFN
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
+Mutator=HUDEffects.HUDEffects
 
 [Settings7 MutLoaderObject]
 GameTypeName=NFNGameType
@@ -206,3 +211,4 @@ Mutator=KFNFN.KFNFN
 Mutator=SetPlayerLoadout.SetPlayerLoadout
 Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
+Mutator=HUDEffects.HUDEffects
