[release]: v8.5 Public Release

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -3,7 +3,7 @@
 [Settings1 MutLoaderObject]
 GameTypeName=KFGameType
 GameDifficulty=1.0
-ServerName=NANU NANU CULT | [EU] | BEGINNER | TESTING - DO NOT JOIN!
+ServerName=NANU NANU CULT | [EU] | BEGINNER | WL
 Mutator=
 
 [Settings2 MutLoaderObject]
@@ -11,14 +11,12 @@ GameTypeName=KFGameType
 GameDifficulty=4.0
 ServerName=NANU NANU CULT | [EU] | HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
-Mutator=KFColorfulHUD.KFColorfulHUD
 Mutator=MutVisibleSpecsX.MutVisSpecs
 Mutator=FPSpinMut.FPSpinMut
 Mutator=KFHardPatF.KFHardPatF
@@ -32,11 +30,8 @@ Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
-Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
-Mutator=SetPlayerLoadout.SetPlayerLoadout
-Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 
@@ -45,14 +40,12 @@ GameTypeName=KFGameType
 GameDifficulty=5.0
 ServerName=NANU NANU CULT | [EU] | SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
-Mutator=KFColorfulHUD.KFColorfulHUD
 Mutator=MutVisibleSpecsX.MutVisSpecs
 Mutator=FPSpinMut.FPSpinMut
 Mutator=KFHardPatF.KFHardPatF
@@ -66,11 +59,8 @@ Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
-Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
-Mutator=SetPlayerLoadout.SetPlayerLoadout
-Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 
@@ -79,14 +69,12 @@ GameTypeName=KFGameType
 GameDifficulty=7.0
 ServerName=NANU NANU CULT | [EU] | HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
-Mutator=KFColorfulHUD.KFColorfulHUD
 Mutator=MutVisibleSpecsX.MutVisSpecs
 Mutator=FPSpinMut.FPSpinMut
 Mutator=KFHardPatF.KFHardPatF
@@ -100,11 +88,8 @@ Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
-Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
-Mutator=SetPlayerLoadout.SetPlayerLoadout
-Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 
@@ -113,14 +98,12 @@ GameTypeName=NFNGameType
 GameDifficulty=4.0
 ServerName=NANU NANU CULT | [EU] | NFN-HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
-Mutator=KFColorfulHUD.KFColorfulHUD
 Mutator=MutVisibleSpecsX.MutVisSpecs
 Mutator=FPSpinMut.FPSpinMut
 Mutator=KFHardPatF.KFHardPatF
@@ -134,12 +117,10 @@ Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
-Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=KFNFN.KFNFN
 Mutator=SetPlayerLoadout.SetPlayerLoadout
-Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 
@@ -148,14 +129,12 @@ GameTypeName=NFNGameType
 GameDifficulty=5.0
 ServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
-Mutator=KFColorfulHUD.KFColorfulHUD
 Mutator=MutVisibleSpecsX.MutVisSpecs
 Mutator=FPSpinMut.FPSpinMut
 Mutator=KFHardPatF.KFHardPatF
@@ -169,12 +148,10 @@ Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
-Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=KFNFN.KFNFN
 Mutator=SetPlayerLoadout.SetPlayerLoadout
-Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
 
@@ -183,14 +160,12 @@ GameTypeName=NFNGameType
 GameDifficulty=7.0
 ServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFSoundBoard.KFSoundBoard
 Mutator=KFServerTools.KFServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
 Mutator=KFShareCash.KFShareCashMut
 Mutator=CountryTags.CountryTags
-Mutator=KFColorfulHUD.KFColorfulHUD
 Mutator=MutVisibleSpecsX.MutVisSpecs
 Mutator=FPSpinMut.FPSpinMut
 Mutator=KFHardPatF.KFHardPatF
@@ -204,11 +179,9 @@ Mutator=RgMsgMut.RgMsgMut
 Mutator=ReloadOptionsMut.ReloadOptionsMut
 Mutator=AreYouVIP.AreYouVIP
 Mutator=WhispColorChanger.WhispColorChanger
-Mutator=ESWWeightMut.ESWCustomWeight
 Mutator=KFEnhancedScoreboard.KFEnhancedScoreboard
 Mutator=WeaponPickupMessage.WeaponPickupMessage
 Mutator=KFNFN.KFNFN
 Mutator=SetPlayerLoadout.SetPlayerLoadout
-Mutator=AlarmTrader.AlarmTrader
 Mutator=AllTradersMut.AllTradersMut
 Mutator=HUDEffects.HUDEffects
