--- a/System/ServerPerksStat.ini
+++ b/System/ServerPerksStat.ini
@@ -1,17 +1,79 @@
 [76561198122568951 StatsObject]
 PlayerName=Vel-San
-PlayerIP=5.28.75.189:62076
-SelectedVeterancy=SRVetSharpshooter
+PlayerIP=5.28.98.106:50061
+SelectedVeterancy=SRVetCommando
+SelectedChar=
+DamageHealedStat=2325
+WeldingPointsStat=2517
+ShotgunDamageStat=17299
+HeadshotKillsStat=744
+StalkerKillsStat=26
+BullpupDamageStat=234181
+MeleeDamageStat=11515
+FlameThrowerDamageStat=3596
+SelfHealsStat=106
+SoleSurvivorWavesStat=8
+CashDonatedStat=600
+FeedingKillsStat=0
+BurningCrossbowKillsStat=0
+GibbedFleshpoundsStat=0
+StalkersKilledWithExplosivesStat=0
+GibbedEnemiesStat=74
+BloatKillsStat=80
+SirenKillsStat=58
+KillsStat=2676
+ExplosivesDamageStat=23458
+TotalPlayTime=21688
+WinsCount=0
+LostsCount=5
+PerkIndex=3
+TotalZedTimeStat=822.000000
+
+[76561198130213809 StatsObject]
+PlayerName=CT_Razer
+PlayerIP=49.145.226.220:14248
+SelectedVeterancy=SRVetFirebug
+SelectedChar=
+DamageHealedStat=97
+WeldingPointsStat=2503
+ShotgunDamageStat=106858
+HeadshotKillsStat=1
+StalkerKillsStat=18
+BullpupDamageStat=37700
+MeleeDamageStat=0
+FlameThrowerDamageStat=205622
+SelfHealsStat=24
+SoleSurvivorWavesStat=1
+CashDonatedStat=4200
+FeedingKillsStat=0
+BurningCrossbowKillsStat=0
+GibbedFleshpoundsStat=0
+StalkersKilledWithExplosivesStat=0
+GibbedEnemiesStat=52
+BloatKillsStat=33
+SirenKillsStat=35
+KillsStat=1364
+ExplosivesDamageStat=2302
+TotalPlayTime=7639
+WinsCount=0
+LostsCount=2
+PerkIndex=5
+TotalZedTimeStat=384.000000
+
+[76561198178235719 StatsObject]
+PlayerName=katsu!
+PlayerIP=83.132.216.237:58047
+SelectedVeterancy=SRVetBerserker
 SelectedChar=
 DamageHealedStat=0
 WeldingPointsStat=0
 ShotgunDamageStat=0
-HeadshotKillsStat=24
+HeadshotKillsStat=0
 StalkerKillsStat=0
 BullpupDamageStat=0
-MeleeDamageStat=19
+MeleeDamageStat=0
 FlameThrowerDamageStat=0
-SelfHealsStat=0
+SelfHealsStat=1
 SoleSurvivorWavesStat=0
 CashDonatedStat=0
 FeedingKillsStat=0
@@ -19,13 +81,44 @@ BurningCrossbowKillsStat=0
 GibbedFleshpoundsStat=0
 StalkersKilledWithExplosivesStat=0
 GibbedEnemiesStat=0
-BloatKillsStat=1
+BloatKillsStat=0
 SirenKillsStat=0
-KillsStat=26
+KillsStat=0
 ExplosivesDamageStat=0
-TotalPlayTime=158
+TotalPlayTime=60
 WinsCount=0
 LostsCount=0
+PerkIndex=4
+TotalZedTimeStat=0.000000
+
+[76561198054509272 StatsObject]
+PlayerName=Lyennzz
+PlayerIP=70.167.228.138:57977
+SelectedVeterancy=SRVetSharpshooter
+SelectedChar=
+DamageHealedStat=0
+WeldingPointsStat=0
+ShotgunDamageStat=0
+HeadshotKillsStat=115
+StalkerKillsStat=0
+BullpupDamageStat=0
+MeleeDamageStat=0
+FlameThrowerDamageStat=0
+SelfHealsStat=20
+SoleSurvivorWavesStat=0
+CashDonatedStat=0
+FeedingKillsStat=0
+BurningCrossbowKillsStat=0
+GibbedFleshpoundsStat=0
+StalkersKilledWithExplosivesStat=2
+GibbedEnemiesStat=19
+BloatKillsStat=12
+SirenKillsStat=5
+KillsStat=392
+ExplosivesDamageStat=10664
+TotalPlayTime=2748
+WinsCount=0
+LostsCount=1
 PerkIndex=2
-TotalZedTimeStat=3.000000
+TotalZedTimeStat=129.000000
 
