[release]: v8.6 Public Release

--- a/System/HUDEffects_Config.ini
+++ b/System/HUDEffects_Config.ini
@@ -1,7 +1,21 @@
 [HUDEffects.HUDEffects]
+# Removes the Grain filter that shows when you die, or in lobby, or in spectator mode
 bSpectatorOverlay=False
+# Removes the 'Red' pulsating colors if you are almost dead
 bNearDeath=False
+# Removes buring overlay, if it's there
 bFireOverlay=False
+# IMHO Best one yet. This removes the 'Sepia' overlay that shows after you start the match
+# Try with/without it and see the difference!
 bShittySepia=False
+# Monster related changes
+# Removes Bloat vomit overlay
 bVomitScreen=False
+# Removes Siren/Stalker slash overlay
 bSlashOverlay=False
+# Removes "Press XXX to open door" message
+bDoorUseMessage=False
+# Removes "Door is welded" message
+bDoorSealedMessage=False
+# Removes 'Zed Time Activated' message
+bZedTimeMessage=False
