[release]: v8.7 Public Release

--- a/System/HUDEffects_Config.ini
+++ b/System/HUDEffects_Config.ini
@@ -1,4 +1,5 @@
 [HUDEffects.HUDEffects]
+############# HUD Related #############
 # Removes the Grain filter that shows when you die, or in lobby, or in spectator mode
 bSpectatorOverlay=False
 # Removes the 'Red' pulsating colors if you are almost dead
@@ -8,14 +9,17 @@ bFireOverlay=False
 # IMHO Best one yet. This removes the 'Sepia' overlay that shows after you start the match
 # Try with/without it and see the difference!
 bShittySepia=False
-# Monster related changes
-# Removes Bloat vomit overlay
-bVomitScreen=False
-# Removes Siren/Stalker slash overlay
-bSlashOverlay=False
 # Removes "Press XXX to open door" message
 bDoorUseMessage=False
 # Removes "Door is welded" message
 bDoorSealedMessage=False
 # Removes 'Zed Time Activated' message
 bZedTimeMessage=False
+############# Monster related #############
+# Removes Bloat vomit overlay
+bVomitScreen=False
+# Removes Siren/Stalker slash overlay
+bSlashOverlay=False
+############# Weapon Related #############
+# Smoke that shows after e.g. M32 Grenade Launcher, M79 Grenade Launcher, LAW
+bSmokeTrail=False
