[release]: v8.8 Public Release

--- a/System/MutLoaderV2.ini
+++ b/System/MutLoaderV2.ini
@@ -11,7 +11,7 @@ GameTypeName=KFGameType
 GameDifficulty=4.0
 ServerName=NANU NANU CULT | [EU] | HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFServerTools.KFServerTools
+Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -40,7 +40,7 @@ GameTypeName=KFGameType
 GameDifficulty=5.0
 ServerName=NANU NANU CULT | [EU] | SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFServerTools.KFServerTools
+Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -69,7 +69,7 @@ GameTypeName=KFGameType
 GameDifficulty=7.0
 ServerName=NANU NANU CULT | [EU] | HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFServerTools.KFServerTools
+Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -98,7 +98,7 @@ GameTypeName=NFNGameType
 GameDifficulty=4.0
 ServerName=NANU NANU CULT | [EU] | NFN-HARD
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFServerTools.KFServerTools
+Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -129,7 +129,7 @@ GameTypeName=NFNGameType
 GameDifficulty=5.0
 ServerName=NANU NANU CULT | [EU] | NFN-SUICIDAL
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFServerTools.KFServerTools
+Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
@@ -160,7 +160,7 @@ GameTypeName=NFNGameType
 GameDifficulty=7.0
 ServerName=NANU NANU CULT | [EU] | NFN-HELL ON EARTH
 Mutator=CleanAppIDMut.CleanAppIDMut
-Mutator=KFServerTools.KFServerTools
+Mutator=ServerTools.ServerTools
 Mutator=AutoCallOut.AutoCallOut
 Mutator=ServerPerksMut.ServerPerksMut
 Mutator=KFWeaponStatConfig.KFWeaponStatConfig
