--- a/System/ServerTools_Config.ini
+++ b/System/ServerTools_Config.ini
@@ -1,4 +1,4 @@
-[KFServerTools.BoostMe]
+[ServerTools.BoostMe]
 # Value for speed boost | Recommended: Between 500 - 1000 (More than 1000 and you'll become flash)
 iSpeedBoost=600
 # If this is set to anything above 0, you will get extra 'boost' time (duration) AFTER the wave has already started
@@ -14,14 +14,17 @@ sBoostEndMessage=%bTrader%w Speed Boost %tDeactivated!%w
 # Controls whether the notification/message is global (On Screen) or in-chat
 bGlobalMSG=True
 
-[KFServerTools.KFServerTools]
+[ServerTools.ServerTools]
 # If set to True, only special players can manipulate trader time!
 bAdminAndSelectPlayers=True
-# If Set to True, you have to use the Custom ServerPerks from the workshop description
-# This will replace the 'Help' section, because who the fuck uses that section anyways?
-bServerPerksCompatibility=True
+# If set to True, new ServerTools tab will be added in your ESC Menu
+bInjectMenu=True
 # Increase speed of all players once trader time starts
 bApplyTraderBoost=True
+# If set to True, all GUI components will be 'Disabled' except
+# Default Trader + Current Trader (If bAdminAndSelectPlayers=True) & Vote Skip Trader (Always enabled).
+# Recommended 'True' for new-player friendly servers
+bOnlyVoteTraderGUI=False
 # Command to be used to skip the whole trader time of current wave
 sSkipTraderCmd=skip
 # Command to be used when you want to start a skip trader vote, instead of instantly skipping regardless of others
