--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -1,6 +1,6 @@
 [ServerPerksMut.ServerPerksMut]
 MinPerksLevel=6
-MaxPerksLevel=6
+MaxPerksLevel=10
 RemotePort=5000
 MidGameSaveWaves=0
 FTPKeepAliveSec=0
@@ -19,14 +19,14 @@ bUsePlayerNameAsID=False
 bMessageAnyPlayerLevelUp=False
 bNoPerkChanges=False
 bUseLowestRequirements=False
-bBWZEDTime=False
+bBWZEDTime=True
 bUseEnhancedScoreboard=True
 bOverrideUnusedCustomStats=False
-bAllowAlwaysPerkChanges=False
+bAllowAlwaysPerkChanges=True
 bEnableWebAdmin=True
 bForceCustomChars=False
-bEnableChatIcons=False
-bEnhancedShoulderView=False
+bEnableChatIcons=True
+bEnhancedShoulderView=True
 bFixGrenadeExploit=True
 bAdminEditStats=True
 bUseFTPLink=False
@@ -80,7 +80,6 @@ TraderInventory=0:KFMod.ClaymoreSwordPickup
 TraderInventory=0:KFMod.CrossbuzzsawPickup
 TraderInventory=0:KFMod.ScythePickup
 TraderInventory=0:KFMod.DwarfAxePickup
-TraderInventory=7:KFMod.FlameThrowerPickup
 TraderInventory=2:KFMod.TrenchgunPickup
 TraderInventory=1:KFMod.FlareRevolverPickup
 TraderInventory=1:KFMod.DualFlareRevolverPickup
